--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -23,3 +23,95 @@ body{
       display: block;
       opacity: .2;
       }
+
+h1{
+  position: relative;
+  display: inline-block;
+  width: 40%;
+  font-size: 36px;
+  font-weight: 600;
+  color: #0F00FF;
+  margin-top: 140px;
+  margin-left: 250px;
+}
+
+.arrow{
+  margin-left: 170px;
+
+}
+.little_rose_emoji{
+  position: relative;
+  display: inline-block;
+  width: 20%;
+  font-size: 48px;
+  color: #F70A8F;
+  /* margin: 0; */
+  margin-top: 100px;
+}
+.big_emoji_288{
+  overflow: hidden;
+  width: 1440px;
+  position: relative;
+  display: block;
+  font-size: 288px;
+  text-align: center;
+
+  /* margin-top: 260px; */
+}
+.div_big_emoji_288{
+  overflow: hidden;
+  width: 1440px;
+  position: relative;
+  display: block;
+  font-size: 288px;
+  text-align: center;
+}
+
+/* .header_section.big_emoji_288 {
+    margin-top: 120px;
+} */
+.big_emoji_230{
+  overflow: hidden;
+  width: 1440px;
+  position: relative;
+  display: inline-block;
+  font-size: 230px;
+  font-weight: 600;
+  text-align: center;
+  color: #F70A8F;
+}
+.emoji_x2{
+  position: relative;
+  display: inline-block;
+  width: 40%;
+  font-size: 144px;
+  text-align: center;
+  margin-top: 100px;
+
+}
+.header_section{
+  overflow: hidden;
+  width: 1440px;
+  color: #0F00FF;
+
+}
+.section_2nd{
+
+  width: 100%;
+  height: 1387px;
+  background-color: #F70A8F;
+  color: white;
+}
+.text{
+  position: relative;
+  display: inline-block;
+  width: 832px;
+  font-size: 24px;
+  margin-left: 17px;
+}
+.p_1{
+  margin-top: 120px:
+}
+.p_2{
+  margin-top: 260px;
+}
