--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -36,14 +36,15 @@ h1{
 }
 
 .arrow{
+  display: inline-block;
   margin-left: 170px;
-
+  vertical-align: top;
 }
 .little_rose_emoji{
   position: relative;
   display: inline-block;
   width: 20%;
-  font-size: 48px;
+  font-size: 64px;
   color: #F70A8F;
   /* margin: 0; */
   margin-top: 100px;
@@ -102,16 +103,23 @@ h1{
   background-color: #F70A8F;
   color: white;
 }
+.div_arrow_and_text{
+  display: block;
+  margin-top: 260px;
+
+}
 .text{
   position: relative;
   display: inline-block;
   width: 832px;
   font-size: 24px;
+
   margin-left: 17px;
 }
 .p_1{
-  margin-top: 120px:
+  padding-top: 120px !important;
+
 }
 .p_2{
-  margin-top: 260px;
+  padding-top: 260px !important;
 }
