--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -25,7 +25,6 @@ body{
       }
 
 h1{
-  position: relative;
   display: inline-block;
   width: 40%;
   font-size: 36px;
@@ -34,7 +33,14 @@ h1{
   margin-top: 140px;
   margin-left: 250px;
 }
-
+h2{
+  display: block;
+  font-size: 48px;
+  font-weight: 600;
+  margin-left: 680px;
+  padding-top: 220px;
+  padding-bottom: 140px;
+}
 .arrow{
   display: inline-block;
   margin-left: 170px;
@@ -47,24 +53,24 @@ h1{
   font-size: 64px;
   color: #F70A8F;
   /* margin: 0; */
-  margin-top: 100px;
+  margin-top: 130px;
 }
-.big_emoji_288{
+.big_emoji_250{
   overflow: hidden;
   width: 1440px;
   position: relative;
   display: block;
-  font-size: 288px;
+  font-size: 250px;
   text-align: center;
 
   /* margin-top: 260px; */
 }
-.div_big_emoji_288{
+.div_big_emoji_250{
   overflow: hidden;
   width: 1440px;
   position: relative;
   display: block;
-  font-size: 288px;
+  font-size: 250px;
   text-align: center;
 }
 
@@ -79,6 +85,7 @@ h1{
   font-size: 230px;
   font-weight: 600;
   text-align: center;
+  margin-top: 220px;
   color: #F70A8F;
 }
 .emoji_x2{
@@ -87,7 +94,16 @@ h1{
   width: 40%;
   font-size: 144px;
   text-align: center;
+  vertical-align: middle;
   margin-top: 100px;
+}
+.emoji_blue_85{
+  display: block;
+  text-align: center;
+  font-size: 85px;
+  margin-top: 120px;
+  margin-bottom: 100px;
+  color: #0F00FF !important;
 
 }
 .header_section{
@@ -102,24 +118,65 @@ h1{
   height: 1387px;
   background-color: #F70A8F;
   color: white;
+  margin-top: 130px;
+}
+.section_3rd{
+  color: #F70A8F;
+}
+.section_4th{
+  color: #F70A8F;
+}
+.section_5th{
+  display: block;
+  background-color: #0F00FF;
+  height: 3070px;
+  margin-top: 230px;
+  color: #F70A8F;
+
+
+
 }
 .div_arrow_and_text{
   display: block;
-  margin-top: 260px;
-
+  padding-top: 260px;
 }
+.div_head_arrow_text{
+  display: block;
+  padding-bottom:
+}
+.emoji_translate{
+  display: block;
+  font-size: 96px;
+  font-weight: 600;
+  margin-left: 130px;
+  color: #F70A8F;
+}
+.p_emoji_translate{
+  display: block;
+  text-align: right;
+  font-size: 24px;
+  margin-top: 50px;
+  margin-right: 245px;
+  margin-bottom: 220px;
+  color: #0F00FF;
+}
+
 .text{
   position: relative;
   display: inline-block;
   width: 832px;
   font-size: 24px;
-
+  font-weight: 400;
   margin-left: 17px;
+  line-height: 30px;
 }
 .p_1{
+  margin-left: -60px;
   padding-top: 120px !important;
-
 }
 .p_2{
-  padding-top: 260px !important;
+  padding-top: 180px !important;
+}
+.p_3{
+  padding-top: 0 !important;
 }
