--- a/stylesheet/content.css
+++ b/stylesheet/content.css
@@ -21,7 +21,7 @@ body{
       background: url('../images/background.png');
       height: 18932px;
       display: block;
-      opacity: .2;
+      opacity: 0;
       }
 
 h1{
